Fix spacing in socials.js

--- a/app/navbar.css
+++ b/app/navbar.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+path {
+    fill: red;
+}
+
 nav {
     display: flex;
     align-items: center;
